--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 VUE_APP_UPLOAD_URL='http://localhost:3000/upload'
+VUE_APP_REQUEST_URL='http://localhost:3000'
 VUE_APP_MAP_APPKEY='bdb143826c073c9366836697f05fa98b'
 VUE_APP_MAP_PLUGINS='&plugin=AMap.DistrictSearch,AMap.PlaceSearch,AMap.Autocomplete'
