fix: 🐛 fix server address and test git hook

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VUE_APP_REQUEST_URL='http://zzysie.xin:8089'
+VUE_APP_REQUEST_URL='https://mini-server.zzysie.xin'
 VUE_APP_BASE_URL='/'
 VUE_APP_MAP_APPKEY='bdb143826c073c9366836697f05fa98b'
 VUE_APP_MAP_PLUGINS='&plugin=AMap.DistrictSearch,AMap.PlaceSearch,AMap.Autocomplete'
